--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body {
  }
 
 
+ .container {
+   width: 100%;
+ }
+
 .nav {
   background-color: #2c3e50;
   color: white;
@@ -129,6 +133,10 @@ button {
   background-color: #2c3e50;
 }
 
+.container.white {
+  font-size: 20px;
+}
+
 p i {
   font-size: 20px;
   padding: 20px;
@@ -167,4 +175,91 @@ footer {
   margin-right: auto;
   font-size: 20px;
   color: white;
+}
+
+
+@media screen and (min-width: 992px) {
+
+
+  .contact {
+    width: 70%;
+  }
+  #send {
+    margin-left: 160px;
+  }
+
+  .container.white {
+    font-size: 30px;
+  }
+
+  .container.white h3 {
+    font-size: 40px;
+  }
+}
+
+@media screen and (min-width: 1170px) {
+
+  .main-sfondo img {
+    height: 350px;
+    border-radius: 200px;
+  }
+
+  .img {
+    height: 250px;
+  }
+
+  .text-left {
+    padding: 40px;
+  }
+
+  .text-left p {
+    float: left;
+    width: 50%;
+    padding-left: 10px;
+    font-size: 20px;
+  }
+
+  .contact {
+    width: 50%;
+  }
+
+  .container input {
+    font-size: 25px;
+    margin-top: 10%;
+  }
+
+  #btn-white {
+    font-size: 20px;
+  }
+
+  .container.contact {
+    padding-bottom: 10px;
+  }
+
+  #send {
+    margin-left: 460px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  .col-xs-12 h2 {
+    font-size: 50px;
+  }
+
+  .lg-spazio {
+    float: left;
+    width: 33.333%;
+  }
+
+  .container.white.text-center h3{
+    font-size: 25px;
+  }
+
+  .lg-spazio p {
+    font-size: 20px;
+  }
+
+
 }
