--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,30 @@ button {
   margin-top: 20px;
 }
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color:#2c3e50;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a:hover {
+  color:  #1abc9c;
+}
+
 .main-sfondo {
   background-color: #1abc9c;
   text-align: center;
