--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ button {
 .main-sfondo {
   background-color: #1abc9c;
   text-align: center;
-  padding: 40px;
+  padding-bottom: : 40px;
   color: white;
 }
 
@@ -67,7 +67,7 @@ button {
 }
 
 .main-sfondo h1 {
-  font-size: 60px;
+  font-size: 50px;
 }
 
 
@@ -79,7 +79,7 @@ button {
 .nopadding::after ,
 .nopadding::before {
   content: "";
-  width: 20%;
+  width: 13%;
   height: 3px;
   background-color: white;
   border-radius: 2px;
@@ -107,7 +107,7 @@ button {
 
 
 div h2  {
-  font-size: 50px;
+  font-size: 40px;
 }
 
 .blu {
