--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,11 @@ div .overlay:hover {
   padding: 10px 10px;
 }
 
+#btn-white:hover {
+  color: #2c3e50;
+  background-color: white;
+}
+
 .contact {
   padding-bottom: 20px;
   border-bottom: 1px solid #6c757d;
@@ -194,6 +199,7 @@ div .overlay:hover {
   margin-bottom: 70px;
 }
 
+
 .white {
   color: white;
   background-color: #2c3e50;
@@ -208,6 +214,11 @@ p i {
   padding: 20px;
   border: 1px solid white;
   border-radius: 30px;
+}
+
+p i:hover {
+  background-color: white;
+  color: #2c3e50;
 }
 
 .fa-facebook-f {
