--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ button {
 .main-sfondo {
   background-color: #1abc9c;
   text-align: center;
-  padding-bottom: : 40px;
+  padding-bottom: 40px;
+  padding-top: 40px;
   color: white;
 }
 
